Added new quotes!

--- a/index.html
+++ b/index.html
@@ -13,8 +13,8 @@
 
 <div id="slider" class="slider">
     <div id="leipzig" class="leipzig"></div>
-    <div id="diman" class="diman">
-        <div class="quote"><p>Кальян помыли?</p></div>
+    <div id="dim" class="diman">
+        <div id="quote" class="quote"></div>
     </div>
     <div id="divan" class="divan"></div>
 </div>
