new adaptive styles

--- a/index.html
+++ b/index.html
@@ -12,10 +12,12 @@
 <div id="result" class="result"></div>
 
 <div id="slider" class="slider">
-    <div id="dim" class="diman">
-        <div id="quote" class="quote"></div>
-    </div>
     <div id="leipzig" class="leipzig"></div>
+    <div class="slidebar">
+        <div id="dim" class="diman">
+            <div id="quote" class="quote"></div>
+        </div>
+    </div>
     <div id="divan" class="divan"></div>
 </div>
 <div class="bg"></div>
