Adaptive layout and new functions

--- a/index.html
+++ b/index.html
@@ -1,25 +1,28 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="ru">
 <head>
     <meta charset="UTF-8">
     <title>Diman</title>
     <script src="index.js"></script>
     <link rel="stylesheet" href="style.css">
-
 </head>
 <body onload="render()">
-
-<div id="result" class="result"></div>
-
-<div id="slider" class="slider">
-    <div id="leipzig" class="leipzig"></div>
-    <div class="slidebar">
-        <div id="dim" class="diman">
-            <div id="quote" class="quote"></div>
-        </div>
-    </div>
-    <div id="divan" class="divan"></div>
-</div>
 <div class="bg"></div>
+<div class="content">
+    <div id="result" class="result"></div>
+    <div id="slider" class="slider">
+        <div id="leipzig" class="leipzig"></div>
+        <div class="slidebar">
+            <div id="dim" class="diman">
+                <div id="quote" class="quote"></div>
+            </div>
+        </div>
+        <div id="divan" class="divan"></div>
+    </div>
+
+</div>
+<footer>
+    <a href="https://github.com/burdakin/diman_timer" target="_blank">Follow this timer on <div class="git-img"></div></a>
+</footer>
 </body>
 </html>
