--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <title>Diman</title>
     <script src="index.js"></script>
     <link rel="stylesheet" href="style.css">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
 </head>
 <body onload="render()">
 <div class="bg"></div>
